*** netmeta, version x.y-z, 2017-mm-yy ***

 ** Major changes **

  * In forest.netmeta(),
    - reference group can be omitted from forest plot
    - treatments can be sorted by treatment estimate (TE), standard
      error (seTE), number of studies in direct comparison (k), and
      proportion of direct information (prop.direct)

  * In decomp.design(), by default, only print designs contributing to
    design-specific decomposition of within-designs Q statistic

  * In netmeta(), separator used in comparison names to concatenate
    treatment labels can be specified by user (default: ":")

  * Input to netdistance() can be either a netmeta object or a matrix

 ** User-visible changes **
    
  * forest.netmeta():
    - new argument 'drop.reference.group'
    - argument 'sortvar' can be used in the following ways:
      sortvar = TE, sortvar = -TE, sortvar = seTE, sortvar = -seTE,
      sortvar = k, sortvar = -k, sortvar = prop.direct, sortvar = -prop.direct

  * print.decomp.design() and netheat():
    - new argument 'showall' which defaults to FALSE

  * print.summary.netmeta():
    - print number of designs
    - print preset between-study variance and corresponding
      information if argument 'tau.preset' is not NULL in netmeta()

  * pairwise():
    - in multi-arm studies exclude comparisons with missing sample
      size or standard error from calculation of pooled variance for
      standardized mean difference (sm = "SMD")

  * print.netsplit():
    - number of studies providing direct evidence printed

  * netdistance():
    - argument name changed from 'A' to 'x' in order to reflect that
      input of R function can be either a netmeta object or an
      adjacency matrix
    
  * Help pages:
    - R command 'help(netmeta)' can be used to show brief overview of
      R package netmeta
    - examples corrected for dataset dietaryfat
    - do not run all examples in forest.netmeta() as CRAN only allows